--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ requires-python = ">=3.10"
 license = { text = "MIT" }
 authors = [{ name = "Mingde Yin", email = "mdsuper@hotmail.com" }]
 maintainers = [{ name = "Mingde Yin", email = "mdsuper@hotmail.com" }]
-dependencies = ["cffi >= 1.16.0", "numpy >= 1.26", "matplotlib >= 3.8"]
+dependencies = ["cffi >= 1.16.0", "numpy >= 1.26", "matplotlib >= 3.8", "scipy"]
 dynamic = ["version"]
 
 [project.urls]
@@ -26,3 +26,6 @@ include = ["cshanty"]
 
 [tool.setuptools_scm]
 write_to = "cshanty/_version.py"
+
+[project.optional-dependencies]
+test = ["pytest >= 7.3"]
